clusters/personal/media/plex/plex-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker:1.32.8.7639-fb6452ebf
        volumeMounts:
          - name: rclone-mount
            mountPropagation: HostToContainer
            mountPath: /rclone-media
            #readOnly: true
          - name: plex-config
            mountPath: /config
          - name: plex-transcode
            mountPath: /transcode
          - name: local-media
            mountPath: /downloads
        
      - name: rclone-merge
        image: rclone/rclone:1.61
        command: ["rclone"]
        args: ["mount", "media:", "/rclonemount/", "--allow-non-empty", "--allow-other"]
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        lifecycle:
          preStop:
            exec:
              command: ["fusermount", "-u", "/rclonemount/"]
        volumeMounts:
          - name: rclone-mount
            mountPropagation: Bidirectional
            mountPath: /rclonemount/
            #readOnly: true
          - name: rclone-config-vol
            mountPath: /root/.config/rclone/
      volumes:
        - name: rclone-mount
          emptyDir: {}
        - name: rclone-config-vol
          secret:
            secretName: rclone-media-conf-secret
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - name: plex-transcode
          emptyDir:
            medium: Memory
        - name: local-media
          persistentVolumeClaim:
            claimName: media-library

---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/hostname: "plex.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "plex.${SECRET_DOMAIN}"
      secretName: "plex-tls"
  rules:
    - host: "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
